# goal_state_reasoning

./: .gitignore  README.md  object_detections  prague_experiment.md  requirements.txt
ReAct/: agent.py  ros_object_detections.py  tools.py
config/: models_info_ycb_ichores.json
docker/: Dockerfile  docker-compose.yml  dockerfile  dockerfile_ros  dockerfile_ros_ollama  dockerfile_ros_openai  entrypoint.sh  entrypoint_openai.sh
example/: example1.py  ice_breaker.py
goal_state_reasoning_msgs/: CMakeLists.txt  package.xml
src/: CMakeLists.txt  agent.py  callbacks.py  main.py  object_detection.py  packedge.xml  pick_and_place.py  pick_and_place_prague.py  placing_reasoner.py  pose_estimatior.py  ros_comm.py  ros_comm_tasks.py  ros_object_detections.py  script.py  test_pl_res.sh  test_placing_reasoner.py  test_planner.py  tools.py  ycb_objects.py
src/srv/: LLM_planner_service.srv
test/: test_placing_reasoner.py  test_planner.py
vis/: bbox.py  example_configs.json  llm_input.txt  llm_input2.py  objects.py  table
