<package format="2">
  <name>goal_state_reasoning_msgs</name>
  <version>0.0.0</version>
  <description>The goal_state_reasoning_msgs package</description>

  <maintainer email="karolina.m.zrobek@gmail.com">kzrobek</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
